--- a/css/styles.css
+++ b/css/styles.css
@@ -12,3 +12,24 @@
   font-weight: 400;
   src: url('../fonts/roboto-v30-latin-regular.woff2') format('woff2');
 }
+
+:root {
+  --color-primary-white: #ffffff;
+  --color-primary-blue: #2b7fff;
+  --color-primary-dblue: #011c44;
+  --color-secondary-gr1: #4a4a4a;
+  --color-secondary-gr2: #747272;
+  --color-secondary-lblue: #011f4a;
+  --color-secondary-yelow: #ffd02b;
+}
+
+body {
+  color: var(--color-primary-dblue);
+  font-family: 'Roboto';
+  font-size: 18px;
+  font-weight: 400px;
+  line-height: 1.5;
+}
+ul {
+  list-style-type: none;
+}
