--- a/css/styles.css
+++ b/css/styles.css
@@ -88,3 +88,57 @@ h1 {
   line-height: 114px; /* 81.429% */
   text-transform: capitalize;
 }
+
+h2 {
+  font-family: Play;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+h2 .accent {
+  color: var(--color-primary-blue);
+  text-transform: capitalize;
+}
+
+#text-inf {
+  color: var(--color-primary-dblue);
+  font-family: Roboto;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 38px; /* 172.727% */
+}
+
+#text-inf .beautyzone {
+  color: var(--color-primary-dblue, #011c44);
+  font-weight: 600;
+}
+
+h3 {
+  color: var(--color-primary-dblue, #011c44);
+  text-align: center;
+  font-family: Play;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+h3 .hero-h3 {
+  color: var(--color-primary-blue, #2b7fff);
+}
+
+#text-inf2 {
+  color: #000;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 133.333% */
+}
+
+footer {
+  background-color: #011f4a;
+}
